src/recipe/parser/snapshots/rattler_build__recipe__parser__output__tests__recipe_schema_error-3.snap
---
source: src/recipe/parser/output.rs
expression: parsed_recipe.unwrap_err()
---
  × Parsing: missing field `version`
   ╭─[5:1]
 5 │       - package:
 6 │ ╭─▶       name: bla
   ╰────
  help: the field `version` is required for `package`

