src/recipe/parser/snapshots/rattler_build__recipe__parser__output__tests__recipe_schema_error.snap
---
source: src/recipe/parser/output.rs
expression: find_outputs_from_src(src.as_str()).unwrap_err()
---
  × an unspecified error occurred.
   ╭────
 9 │       name: bla
   ╰────
  help: Parser error: invalid value
